[gd_scene load_steps=5 format=3 uid="uid://cl5u05vudb8cs"]

[ext_resource type="Texture2D" uid="uid://qap6crr7x770" path="res://icon.svg" id="1_wc21d"]
[ext_resource type="Script" path="res://scripts/switch_trigger.gd" id="2_5d6di"]

[sub_resource type="Animation" id="Animation_aw88i"]
resource_name = "switch_animation"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mwf3n"]
_data = {
"switch_animation": SubResource("Animation_aw88i")
}

[node name="SwitchScene" type="Node2D"]
script = ExtResource("2_5d6di")

[node name="SwitchSprite" type="Sprite2D" parent="."]
position = Vector2(74.2, 124)
scale = Vector2(0.710938, 1)
texture = ExtResource("1_wc21d")

[node name="LightSprite" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(75.2, 23)
scale = Vector2(0.742188, 0.34375)
texture = ExtResource("1_wc21d")

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(91.2, 132)
polygon = PackedVector2Array(-61, -74, 30, -74, 33, 57, -58, 53)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Area2D")
libraries = {
"": SubResource("AnimationLibrary_mwf3n")
}

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
